[gd_scene load_steps=3 format=3 uid="uid://20f142d8vo7q"]

[ext_resource type="PackedScene" uid="uid://d3ul8rfnnwv3p" path="res://character_display/character_display.tscn" id="1_c3bq8"]
[ext_resource type="Script" uid="uid://lxvludk2wa8r" path="res://character_display/character_display_test.gd" id="1_e6ugl"]

[node name="CharacterDisplayTest" type="Node2D"]
script = ExtResource("1_e6ugl")

[node name="CharacterDisplay" parent="." instance=ExtResource("1_c3bq8")]
position = Vector2(874, 543)

[node name="HeadColorPickerButton" type="ColorPickerButton" parent="."]
offset_left = 1470.0
offset_top = 340.0
offset_right = 1598.0
offset_bottom = 372.0
text = "Head"

[node name="BodyColorPickerButton" type="ColorPickerButton" parent="."]
offset_left = 1468.0
offset_top = 441.0
offset_right = 1672.0
offset_bottom = 512.0
text = "Head"

[node name="FeetColorPickerButton" type="ColorPickerButton" parent="."]
offset_left = 1462.0
offset_top = 547.0
offset_right = 1666.0
offset_bottom = 618.0
text = "Head"

[node name="RandomizeButton" type="Button" parent="."]
offset_left = 723.0
offset_top = 728.0
offset_right = 1028.0
offset_bottom = 799.0
text = "Randomize!"
